initial customization of content

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
-  <meta name="description" content="Find us online!">
-  <meta name="author" content="Seth Cottle">
+  <title>Jourdan</title>
+  <meta name="description" content="Find me online!">
+  <meta name="author" content="Jourdan Keillor">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -66,10 +66,16 @@
         <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
 
         <!-- Title -->
-        <h1>LittleLink</h1>
+        <h1>Jourdan</h1>
 
         <!-- Short Bio -->
-        <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
+        <p>I'm a Melbourne-based lab systems administrator who spends my free time dabbling in a variety of online and offline hobbies. My current fixations include but are not limited to: <br>
+            <ul>
+                <li>Optimization of automated self-hosted digital content platforms (if you want something done right...).</li>
+                <li>Analysing the nothing-if-not-consistent talent-wasting efforts of the Detroit Tigers.</li>
+            </ul>
+        </p>
+        <p>Find me lurking at any of the following:</p>
 
         <!--
 
@@ -97,25 +103,29 @@
 
         -->
 
+        <!-- 
         <!-- GitHub -->
         <a class="button button-github" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
         <br>
+        -->
 
         <!-- Twitter -->
-        <a class="button button-twit" href="#" target="_blank" rel="noopener">
+        <a class="button button-twit" href="https://twitter.com/jkr442" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/twitter.svg" alt="Twitter Logo">Twitter</a>
         <br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="#" target="_blank" rel="noopener">
+        <a class="button button-instagram" href="https://www.instagram.com/jkr442/?hl=en" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
+        <!-- 
         <!-- Facebook -->
         <a class="button button-faceb" href="#" target="_blank" rel="noopener">
             <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
         <br>
+        -->
 
         <!-- Facebook Messenger -->
         <a class="button button-messenger" href="#" target="_blank" rel="noopener">
@@ -123,20 +133,23 @@
         <br>
 
         <!-- LinkedIn -->
-        <a class="button button-linked" href="#" target="_blank" rel="noopener">
+        <a class="button button-linked" href="https://au.linkedin.com/in/jourdan-keillor-135a4a2b" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
         <br>
 
+        <!-- 
         <!-- YouTube -->
         <a class="button button-yt" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
         <br>
+        -->
 
         <!-- Discord -->
-        <a class="button button-discord" href="#" target="_blank" rel="noopener">
+        <a class="button button-discord" href="discordapp.com/users/175195763343753216" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
         <br>
 
+        <!-- 
         <!-- Twitch -->
         <a class="button button-twitch" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Twitch</a>
@@ -201,17 +214,19 @@
         <a class="button button-clubhouse" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/clubhouse.svg" alt="Clubhouse Logo">Clubhouse</a>
         <br>
+        -->
         
         <!-- Reddit -->
-        <a class="button button-reddit" href="#" target="_blank" rel="noopener">
+        <a class="button button-reddit" href="https://www.reddit.com/user/jourdan442" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/reddit.svg" alt="Reddit Logo">Reddit</a>
         <br>
 
         <!-- Mastodon -->
-        <a class="button button-mastodon" href="#" target="_blank" rel="me noopener">
+        <a class="button button-mastodon" href="http://aus.social/@Jkr442" target="_blank" rel="me noopener">
             <img class="icon" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
         <br>
 
+        <!-- 
         <!-- Medium -->
         <a class="button button-medium" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/medium.svg" alt="Medium Logo">Medium</a>
@@ -466,6 +481,7 @@
         <a class="button button-unsplash" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/unsplash.svg" alt="Unsplash Logo">Unsplash</a>
         <br>
+        -->
 
         <br>
         <!-- 
