--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <h1>Jourdan</h1>
 
         <!-- Short Bio -->
-        <p>I'm a Melbourne-based lab systems administrator who spends my free time dabbling in a variety of online and offline hobbies. My current fixations include but are not limited to: <br>
+        <p>I'm a Melbourne-based lab systems administrator who spends my free time dabbling in a variety of online and offline hobbies. My current fixations include but are not limited to:
             <ul>
-                <li>Optimization of automated self-hosted digital content platforms (if you want something done right...).</li>
-                <li>Analysing the nothing-if-not-consistent talent-wasting efforts of the Detroit Tigers.</li>
+                <li>Optimization of automated self-hosted digital content platforms.</li>
+                <li>Analysing the nothing-if-not-consistent efforts of the Detroit Tigers.</li>
             </ul>
         </p>
         <p>Find me lurking at any of the following:</p>
@@ -103,13 +103,6 @@
 
         -->
 
-        <!-- 
-        <!-- GitHub -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
-        <br>
-        -->
-
         <!-- Twitter -->
         <a class="button button-twit" href="https://twitter.com/jkr442" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/twitter.svg" alt="Twitter Logo">Twitter</a>
@@ -120,101 +113,15 @@
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
-        <!-- 
-        <!-- Facebook -->
-        <a class="button button-faceb" href="#" target="_blank" rel="noopener">
-            <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
-        <br>
-        -->
-
-        <!-- Facebook Messenger -->
-        <a class="button button-messenger" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
-        <br>
-
         <!-- LinkedIn -->
         <a class="button button-linked" href="https://au.linkedin.com/in/jourdan-keillor-135a4a2b" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
         <br>
 
-        <!-- 
-        <!-- YouTube -->
-        <a class="button button-yt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
-        <br>
-        -->
-
         <!-- Discord -->
         <a class="button button-discord" href="discordapp.com/users/175195763343753216" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
         <br>
-
-        <!-- 
-        <!-- Twitch -->
-        <a class="button button-twitch" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Twitch</a>
-        <br>
-
-        <!-- ProductHunt -->
-        <a class="button button-producthunt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/producthunt.svg" alt="Product Hunt Logo">Product Hunt</a>
-        <br>
-
-        <!-- Snapchat -->
-        <a class="button button-snapchat" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
-        <br>
-
-        <!-- Spotify -->
-        <a class="button button-spotify" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a>
-        <br>
-
-        <!-- Spotify Alt -->
-        <a class="button button-spotify-alt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/spotify-green.svg" alt="Spotify Logo">Listen on Spotify</a>
-        <br>
-
-        <!-- YouTube Music -->
-        <a class="button button-yt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/youtube-music.svg" alt="YouTube Music Logo">Listen on YouTube Music</a>
-        <br>
-
-        <!-- Apple Music -->
-        <a class="button button-apple-music" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/apple-music.svg" alt="Apple Music Logo">Listen on Apple Music</a>
-        <br>
-
-        <!-- Apple Music Alt -->
-        <a class="button button-apple-music-alt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/apple-music-white.svg" alt="Apple Music Logo">Listen on Apple Music</a>
-        <br>
-
-        <!-- Apple Podcasts -->
-        <a class="button button-apple-podcasts" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/apple-podcasts.svg" alt="Apple Podcasts Logo">Listen on Apple Podcasts</a>
-        <br>
-
-        <!-- Apple Podcasts Alt-->
-        <a class="button button-apple-podcasts-alt" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/apple-podcasts-white.svg" alt="Apple Podcasts Logo">Listen on Apple Podcasts</a>
-        <br>
-
-        <!-- Google Podcasts -->
-        <a class="button button-google-podcasts" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/google-podcasts.svg" alt="Google Podcasts Logo">Listen on Google Podcasts</a>
-        <br>
-
-        <!-- Substack -->
-        <a class="button button-substack" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/substack.svg" alt="Substack Logo">Subscribe on Substack</a>
-        <br>
-
-        <!-- Clubhouse -->
-        <a class="button button-clubhouse" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/clubhouse.svg" alt="Clubhouse Logo">Clubhouse</a>
-        <br>
-        -->
         
         <!-- Reddit -->
         <a class="button button-reddit" href="https://www.reddit.com/user/jourdan442" target="_blank" rel="noopener">
@@ -224,265 +131,6 @@
         <!-- Mastodon -->
         <a class="button button-mastodon" href="http://aus.social/@Jkr442" target="_blank" rel="me noopener">
             <img class="icon" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
-        <br>
-
-        <!-- 
-        <!-- Medium -->
-        <a class="button button-medium" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/medium.svg" alt="Medium Logo">Medium</a>
-        <br>
-
-        <!-- Pinterest -->
-        <a class="button button-pinterest" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
-        <br>
-
-        <!-- TikTok -->
-        <a class="button button-tiktok" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
-        <br>
-
-        <!-- Email -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/email.svg" alt="Email Icon">hello@littlelink.io</a>
-        <br>
-
-        <!-- Email Alternative -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/email_alt.svg" alt="Email Icon">hello@littlelink.io</a>
-        <br>
-
-        <!-- Blog -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/blog.svg" alt="Blog Icon">Blog</a>
-        <br>
-
-        <!-- SoundCloud -->
-        <a class="button button-soundcloud" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
-        <br>
-
-        <!-- Figma -->
-        <a class="button button-figma" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/figma.svg" alt="Figma Logo">Figma</a>
-        <br>
-
-        <!-- Kit -->
-        <a class="button button-kit" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/kit.svg" alt="Kit Logo">Kit</a>
-        <br>
-
-        <!-- Telegram -->
-        <a class="button button-telegram" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
-        <br>
-
-        <!-- LittleLink -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/littlelink.svg" alt="LittleLink Logo">LittleLink</a>
-        <br>
-
-        <!-- Trello -->
-        <a class="button button-trello" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/trello.svg" alt="Trello Logo">Trello</a>
-        <br>
-
-        <!-- Notion -->
-        <a class="button button-notion" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/notion.svg" alt="Notion Logo">Notion</a>
-        <br>
-
-        <!-- Kickstarter -->
-        <a class="button button-kickstarter" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/kickstarter.svg" alt="Kickstarter Logo">Kickstarter</a>
-        <br>
-
-        <!-- Etsy -->
-        <a class="button button-etsy" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/etsy.svg" alt="Etsy Logo">Etsy</a>
-        <br>
-
-        <!-- Tumblr -->
-        <a class="button button-tumb" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/tumblr.svg" alt="Tumblr Logo">Tumblr</a>
-        <br>
-
-        <!-- Steam -->
-        <a class="button button-steam" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/steam.svg" alt="Steam Logo">Steam</a>
-        <br>
-
-        <!-- Strava -->
-        <a class="button button-strava" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/strava.svg" alt="Strava Logo">Strava</a>
-        <br>
-
-        <!-- Vimeo -->
-        <a class="button button-vimeo" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/vimeo.svg" alt="Vimeo Logo">Vimeo</a>
-        <br>
-
-        <!-- PayPal-->
-        <a class="button button-paypal" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a>
-        <br>
-
-        <!-- WhatsApp -->
-        <a class="button button-whatsapp" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/whatsapp.svg" alt="WhatsApp Logo">WhatsApp</a>
-        <br>
-
-        <!-- Untappd -->
-        <a class="button button-untappd" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/untappd.svg" alt="Untappd Logo">Untappd</a>
-        <br>
-
-        <!-- Wordpress -->
-        <a class="button button-wordpress" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/wordpress.svg" alt="Wordpress Logo">Wordpress</a>
-        <br>
-
-        <!-- Goodreads -->
-        <a class="button button-goodreads" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
-        <br>
-
-        <!-- Skoob -->
-        <a class="button button-skoob" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/skoob.svg" alt="Skoob Logo">Skoob</a>
-        <br>
-
-        <!-- Gitlab -->
-        <a class="button button-gitlab" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
-        <br>
-
-        <!-- XING -->
-        <a class="button button-xing" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/xing.svg" alt="xing Logo">Xing</a>
-        <br>
-
-        <!-- Bandcamp -->
-        <a class="button button-bandcamp" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
-        <br>
-
-        <!-- Patreon -->
-        <a class="button button-patreon" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/patreon.svg" alt="Patreon Logo">Patreon</a>
-        <br>
-
-        <!-- Signal -->
-        <a class="button button-signal" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/signal.svg" alt="Signal Logo">Signal</a>
-        <br>
-
-        <!-- Apple App Store -->
-        <a class="button button-appstore" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/appstore.svg" alt="Apple App Store Logo">Apple App Store</a>
-        <br>
-
-        <!-- Google Play Store  -->
-        <a class="button button-playstore" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/playstore.svg" alt="Google Play Store Logo">Google Play Store</a>
-        <br>
-
-        <!-- Amazon  -->
-        <a class="button button-amazon" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/amazon.svg" alt="Amazon Logo">Amazon</a>
-        <br>
-                
-        <!-- Venmo -->
-        <a class="button button-venmo" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/venmo.svg" alt="Venmo Logo">Venmo</a>
-        <br>
-
-        <!-- Cash App Dollar -->
-        <a class="button button-cashapp" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/cashapp_dollar.svg" alt="Cash App Logo">Cash App Dollar</a>
-        <br>
-
-        <!-- Cash App Pound -->
-        <a class="button button-cashapp" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/cashapp_pound.svg" alt="Cash App Logo">Cash App Pound</a>
-        <br>
-
-        <!-- Cash App BTC -->
-        <a class="button button-cashapp" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/cashapp_btc.svg" alt="Cash App Logo">Cash App Bitcoin</a>
-        <br>
-
-        <!-- dev.to -->
-        <a class="button button-dev-to" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/dev_to.svg" alt="dev.to Logo">dev.to</a>
-        <br>
-
-        <!-- Redbubble -->
-        <a class="button button-redbubble" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/redbubble.svg" alt="Redbubble Logo">Redbubble</a>
-        <br>
-
-        <!-- OnlyFans -->
-        <a class="button button-onlyfans" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/onlyfans.svg" alt="Only Fans Logo">OnlyFans (18+)</a>
-        <br>
-
-        <!-- Web -->
-        <a class="button button-web" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/web.svg" alt="Web Logo">Website</a>
-        <br>
-
-        <!-- Buy Me a Coffee -->
-        <a class="button button-coffee" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/coffee.svg" alt="Buy Me a Coffee">Buy Me a Coffee</a>
-        <br>
-
-        <!-- Ko-fi -->
-        <a class="button button-ko-fi" href="#" target="_blank" rel="noopener">
-          <img class="icon" src="images/icons/ko-fi.svg" alt="Ko-fi">Ko-fi</a>
-        <br>
-
-        <!-- VRChat -->
-        <a class="button button-vrchat" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/vrchat.svg" alt="VRChat Logo">VRChat</a>
-        <br>
-
-        <!-- Threema -->
-        <a class="button button-threema" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/threema.svg" alt="Threema Logo">Threema</a>
-        <br>
-
-        <!-- Flickr -->
-        <a class="button button-flickr" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/flickr.svg" alt="Flickr Logo">Flickr</a>
-        <br>
-
-        <!-- Letterboxd -->
-        <a class="button button-letterboxd" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/letterboxd.svg" alt="Letterboxd Logo">Letterboxd</a>
-        <br>
-
-        <!-- Hashnode -->
-        <a class="button button-hashnode" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/hashnode.svg" alt="hashnode Logo">Hashnode</a>
-        <br>
-
-        <!-- Google Scholar -->
-        <a class="button button-google-scholar" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/google_scholar.svg" alt="Google Scholar Icon">Google Scholar</a>
-        <br>
-
-        <!-- Post.news -->
-        <a class="button button-post-news" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/post.news.png" alt="Post. Logo">Post.</a>
-        <br>
-
-        <!-- Unsplash -->
-        <a class="button button-unsplash" href="#" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/unsplash.svg" alt="Unsplash Logo">Unsplash</a>
-        <br>
-        -->
-
         <br>
         <!-- 
             Footer:
