--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png">
+  <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
 </head>
 
@@ -74,8 +74,8 @@
           variety of online and offline projects. 
           My current fixations include optimization 
           of automated self-hosted digital content platforms
-          and analysing the nothing-if-not-consistently 
-          piss-weak efforts of the Detroit Tigers.
+          and analysing the nothing-if-not-consistently-piss-weak 
+          efforts of the Detroit Tigers.
         </p>
         <p>Find me lurking at any of the following:</p>
 
