update icon use on mobile browsers

--- a/index.html
+++ b/index.html
@@ -44,26 +44,8 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
 
-        <!-- 
-
-          ## Getting Started with LittleLink
-
-          This page has been built with every pre-designed button available in LittleLink by default. You can rearrange and delete as needed.
-
-          You can add your own brand or others brands you may need in the `css/brands.css` file. 
-
-          You can add custom icons to `images/icons/...`. It is recommended to use a 24x24 .SVG.
-
-          Edit the "Your Image Here" section to add your own personal branding, like a picture of yourself or your brand logo!
-
-          Edit the "Title" section to change the page heading. You can use something like your name, your social handle, or your brand name.
-
-          Edit the "Short Bio" section tell users about yourself or your brand.
-
-        -->
-
         <!-- Your Image Here -->
-        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
 
         <!-- Title -->
         <h1>Jourdan</h1>
