--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>.</p>
+        <p><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor <aherf="scratchpad.md" style="display:none;"></a>
 
       </div>
     </div>
