--- a/index.html
+++ b/index.html
@@ -118,13 +118,8 @@
             <img class="icon" src="images/icons/reddit.svg" alt="Reddit Logo">Reddit</a>
         <br>
 
-        <!-- 
-            Footer:
-            This includes a link to privacy.html page which can be setup for your Privacy Policy.
-            This also includes a link to the LittleLink repository to make forking LittleLink easier.
-            You can edit or remove anything here to make your own footer.
-        -->
-        <p><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor <aherf="scratchpad.md" style="display:none;"></a>
+        <!--Footer-->
+        <p><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor <a href="scratchpad.md" style="display:none;"></a>
         </p>
 
       </div>
