--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         <br>
 
         <!--Footer-->
-        <p><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor <a href="scratchpad.md" style="display:none;"></a>
+        <p><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
         </p>
-
+        <div style="position:fixed; bottom:0; left:0; width:100%; z-index:2;">
+          <a href="scratchpad.md" style="display:block; height:50px; line-height:50px; text-align:center; color:#fff; background-color:#000; opacity:0;"></a>
+        </div>
       </div>
     </div>
   </div>
