--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
             <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
         <br>
         
+        <!-- Bluesky -->
+        <a class="button button-bluesky" href="https://bsky.app/profile/joz.bsky.social" target="_blank" rel="me noopener">
+            <img class="icon" src="images/icons/mastodon.svg" alt="Bluesky Logo">Bluesky</a>
+        <br>
+        
         <!-- Mastodon -->
         <a class="button button-mastodon" href="http://aus.social/@Jkr442" target="_blank" rel="me noopener">
             <img class="icon" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
