--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         
         <!-- Bluesky -->
         <a class="button button-bluesky" href="https://bsky.app/profile/joz.bsky.social" target="_blank" rel="me noopener">
-            <img class="icon" src="images/icons/mastodon.svg" alt="Bluesky Logo">Bluesky</a>
+            <img class="icon" src="images/icons/bluesky.jpg" alt="Bluesky Logo">Bluesky</a>
         <br>
         
         <!-- Mastodon -->
