--- a/privacy.html
+++ b/privacy.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <!-- Page Information
+<head>
+
+  <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8" />
-    <title>LittleLink Privacy Policy</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+  <meta charset="utf-8">
+  <title>Privacy Policy</title>
+  <meta name="description" content="Find me online!">
+  <meta name="author" content="Jourdan Keillor">
 
-    <!-- Mobile Specific Metas
+  <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS
+
+  <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/normalize.css">
 
-    <!-- 
-        Themes:
-         Auto:   css/skeleton-auto.css
-         Light:  css/skeleton-light.css
-         Dark:   css/skeleton-dark.css
+    <!-- Themes:
+            Auto:   css/skeleton-auto.css
+            Light:  css/skeleton-light.css
+            Dark:   css/skeleton-dark.css
      -->
+    <link rel="stylesheet" href="css/skeleton-auto.css">
 
-    <link rel="stylesheet" href="css/skeleton-auto.css" />
-    <link rel="stylesheet" href="css/brands.css" />
+    <!-- Brand Styles -->
+    <link rel="stylesheet" href="css/brands.css">
 
-    <!-- Favicon
+
+  <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/avatar.png" />
+  <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
-  </head>
+</head>
 
   <body>
     <!-- Primary Page Layout
