--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
             <img class="icon" src="images/icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
         <br>
         
+        <!-- Last.fm -->
+        <a class="button button-last.fm" href="https://www.last.fm/user/jkr442" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/lastfm.png" alt="Last.fm Logo">Last.fm</a>
+        <br>
+        
         <!-- Twitter -->
         <a class="button button-twit" href="https://twitter.com/jkr442" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/twitter.svg" alt="Twitter Logo">Twitter</a>
