--- a/privacy.html
+++ b/privacy.html
@@ -108,8 +108,10 @@
           <br />
           
           <!--Footer-->
-          <center>
-            <p>Built by me using <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>.</p>
+          <p>
+            <a href="index.html">⬅️ Back to main page</a>
+          </p>
+          <br>
           </center>
         </div>
       </div>
