--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         
         <!-- Last.fm -->
         <a class="button button-last.fm" href="https://www.last.fm/user/jkr442" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/lastfm.png" alt="Last.fm Logo">Last.fm</a>
+            <img class="icon" src="images/icons/lastfm-square.svg" alt="Last.fm Logo">Last.fm</a>
         <br>
         
         <!-- Twitter -->
