--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <br>
         
         <!-- Last.fm -->
-        <a class="button button-last.fm" href="https://www.last.fm/user/jkr442" target="_blank" rel="noopener">
+        <a class="button button-lastfm" href="https://www.last.fm/user/jkr442" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/lastfm-square.svg" alt="Last.fm Logo">Last.fm</a>
         <br>
         
