--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           who spends my free time dabbling in a 
           variety of online and offline projects. 
           My current fixations include optimization 
-          of automated self-hosted digital content platforms
+          of automated<sup>(mostly *arr)</sup> self-hosted<sup>(mostly Docker)</sup> digital content platforms<sup>(mostly Plex)</sup>
           and analysing the nothing-if-not-consistently-piss-weak 
           efforts of the Detroit Tigers.
         </p>
