--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           who spends my free time dabbling in a 
           variety of online and offline projects. 
           My current fixations include optimization 
-          of automated<sup>(mostly *arr)</sup> self-hosted<sup>(mostly Docker)</sup> digital content platforms<sup>(mostly Plex)</sup>
+          of automated<sup>1</sup> self-hosted<sup>2</sup> 
+          digital content platforms<sup>3</sup>
           and analysing the nothing-if-not-consistently-piss-weak 
           efforts of the Detroit Tigers.
         </p>
@@ -129,6 +130,10 @@
         <br>
 
         <!--Footer-->
+        <p style="font-size: 75%;"><sup>1</sup>Mostly *arr-suite apps</p>
+        <p style="font-size: 75%;"><sup>2</sup>Mostly Docker containers</p>
+        <p style="font-size: 75%;"><sup>3</sup>Mostly Plex</p>
+        <br>
         <p style="font-size: 75%;"><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor</p>
         <br>
         <div style="position:fixed; bottom:0; left:0; width:100%; z-index:2;">
