--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
         <br>
 
         <!--Footer-->
-        <p style="font-size: 75%;"><sup>1</sup>Mostly *arr-suite apps</p>
-        <p style="font-size: 75%;"><sup>2</sup>Mostly Docker containers</p>
-        <p style="font-size: 75%;"><sup>3</sup>Mostly Plex</p>
+        <p style="font-size: 75%;">
+          <sup>1</sup>Mostly *arr-suite apps
+          <sup>2</sup>Mostly Docker containers
+          <sup>3</sup>Mostly Plex
+        </p>
         <br>
         <p style="font-size: 75%;"><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor</p>
         <br>
