--- a/index.html
+++ b/index.html
@@ -128,15 +128,16 @@
         <a class="button button-instagram" href="https://www.instagram.com/jkr442/?hl=en" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
+        <br>
+        <br>
 
         <!--Footer-->
         <p style="font-size: 75%;">
           <sup>1</sup>Mostly *arr-suite apps
           <sup>2</sup>Mostly Docker containers
           <sup>3</sup>Mostly Plex
-        </p>
         <br>
-        <p style="font-size: 75%;"><a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor</p>
+        <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor</p>
         <br>
         <div style="position:fixed; bottom:0; left:0; width:100%; z-index:2;">
           <a href="scratchpad.md" style="display:block; height:25px; line-height:50px; text-align:center; color:#fff; background-color:#000; opacity:0;"></a>
