--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
         <!--Footer-->
         <p style="font-size: 75%;">
           <sup>1</sup> Mostly *arr-suite apps 
-          <sup>2</sup> Mostly Docker containers 
+          <br><sup>2</sup> Mostly Docker containers 
+          <br>
           <sup>3</sup> Mostly Plex 
-        <br>
-        <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor</p>
-        <br>
-        <div style="position:fixed; bottom:0; left:0; width:100%; z-index:2;">
+          <br>
+          <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
+        </p>
+          <br>
+          <div style="position:fixed; bottom:0; left:0; width:100%; z-index:2;">
           <a href="scratchpad.md" style="display:block; height:25px; line-height:50px; text-align:center; color:#fff; background-color:#000; opacity:0;"></a>
         </div>
       </div>
