--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <!-- Short Bio -->
         <p>I'm a Melbourne-based lab systems administrator 
           who spends my free time dabbling in a 
-          variety of online and offline projects. 
+          variety of online and offline projects<sup>1</sup>. 
           My current fixations include optimization 
-          of automated<sup>1</sup> self-hosted<sup>2</sup> 
-          digital content platforms<sup>3</sup>
+          of automated<sup>2</sup> self-hosted<sup>3</sup> 
+          digital content platforms<sup>4</sup>
           and analysing the nothing-if-not-consistently-piss-weak 
-          efforts of the Detroit Tigers.
+          efforts of the Detroit Tigers<sup>5</sup>.
         </p>
         <p>Find me lurking at any of the following:</p>
 
@@ -133,10 +133,15 @@
 
         <!--Footer-->
         <p style="font-size: 75%;">
-          <sup>1</sup> Mostly *arr-suite apps 
-          <br><sup>2</sup> Mostly Docker containers 
+          <sup>1</sup> Mostly online
           <br>
-          <sup>3</sup> Mostly Plex 
+          <sup>2</sup> Mostly *arr-suite apps
+          <br>
+          <sup>3</sup> Mostly Docker containers
+          <br>
+          <sup>4</sup> Mostly Plex
+          <br>
+          <sup>5</sup> Mostly piss 
           <br>
           <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
         </p>
