--- a/gabs.html
+++ b/gabs.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Collapsible Table</title>
+	<title>Collapsible Table - Nord Theme</title>
 	<style>
+		body {
+			background-color: #2E3440;
+			color: #D8DEE9;
+			font-family: sans-serif;
+		}
+
 		table {
 			border-collapse: collapse;
 			width: 100%;
 			max-width: 800px;
+			background-color: #3B4252;
+			color: #ECEFF4;
 		}
 
 		th, td {
 			text-align: left;
 			padding: 8px;
-			border-bottom: 1px solid #ddd;
+			border-bottom: 1px solid #4C566A;
 		}
 
 		th {
-			background-color: #f2f2f2;
+			background-color: #4C566A;
 		}
 
 		.collapsible-header {
-			background-color: #f2f2f2;
+			background-color: #4C566A;
 			cursor: pointer;
 			padding: 8px;
 			border: none;
@@ -28,27 +36,43 @@
 			outline: none;
 			font-size: 16px;
 			transition: 0.4s;
+			color: #D8DEE9;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
 		}
 
 		.collapsible-header:hover {
-			background-color: #ddd;
+			background-color: #5E81AC;
 		}
 
 		.collapsible-content {
 			padding: 0 8px;
 			display: none;
 			overflow: hidden;
-			border: 1px solid #ddd;
-			background-color: #fff;
+			border: 1px solid #4C566A;
+			background-color: #434C5E;
+			color: #D8DEE9;
+		}
+
+		.collapsible-content p {
+			margin: 0;
 		}
 	</style>
 	<script>
 		function toggleContent(event) {
 			var content = event.target.nextElementSibling;
+			var rows = content.getElementsByTagName("tr");
 			if (content.style.display === "block") {
+				for (var i = 0; i < rows.length; i++) {
+					rows[i].style.display = "none";
+				}
 				content.style.display = "none";
 			} else {
 				content.style.display = "block";
+				for (var i = 0; i < rows.length; i++) {
+					rows[i].style.display = "";
+				}
 			}
 		}
 	</script>
@@ -67,43 +91,40 @@
 				<td>
 					<button class="collapsible-header" onclick="toggleContent(event)">Section 1</button>
 					<div class="collapsible-content">
-						<p>Content for section 1 goes here.</p>
+						<table>
+							<tbody>
+								<tr>
+									<td>Content for section 1, row 1</td>
+								</tr>
+								<tr>
+									<td>Content for section 1, row 2</td>
+								</tr>
+								<tr>
+									<td>Content for section 1, row 3</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</td>
 				<td>
 					<button class="collapsible-header" onclick="toggleContent(event)">Section 2</button>
 					<div class="collapsible-content">
-						<p>Content for section 2 goes here.</p>
-					</div>
-				</td>
-				<td>
-					<button class="collapsible-header" onclick="toggleContent(event)">Section 3</button>
-					<div class="collapsible-content">
-						<p>Content for section 3 goes here.</p>
-					</div>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<button class="collapsible-header" onclick="toggleContent(event)">Section 4</button>
-					<div class="collapsible-content">
-						<p>Content for section 4 goes here.</p>
-					</div>
-				</td>
-				<td>
-					<button class="collapsible-header" onclick="toggleContent(event)">Section 5</button>
-					<div class="collapsible-content">
-						<p>Content for section 5 goes here.</p>
-					</div>
-				</td>
-				<td>
-					<button class="collapsible-header" onclick="toggleContent(event)">Section 6</button>
-					<div class="collapsible-content">
-						<p>Content for section 6 goes here.</p>
+						<table>
+							<tbody>
+								<tr>
+									<td>Content for section 1, row 1</td>
+								</tr>
+								<tr>
+									<td>Content for section 1, row 2</td>
+								</tr>
+								<tr>
+									<td>Content for section 1, row 3</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</td>
 			</tr>
 		</tbody>
 	</table>
 </body>
-</html>
