--- a/gabs.html
+++ b/gabs.html
@@ -80,51 +80,74 @@
 <body>
 	<table>
 		<thead>
-			<tr>
-				<th>Section 1</th>
-				<th>Section 2</th>
-				<th>Section 3</th>
-			</tr>
+		  <tr>
+			<th>#</th>
+			<th>Brewery</th>
+			<th>Beer Name</th>
+			<th>Style</th>
+			<th>ABV</th>
+			<th>Complexity</th>
+			<th>Description</th>
+			<th>Interested</th>
+			<th>Notes</th>
+		  </tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td>
-					<button class="collapsible-header" onclick="toggleContent(event)">Section 1</button>
-					<div class="collapsible-content">
-						<table>
-							<tbody>
-								<tr>
-									<td>Content for section 1, row 1</td>
-								</tr>
-								<tr>
-									<td>Content for section 1, row 2</td>
-								</tr>
-								<tr>
-									<td>Content for section 1, row 3</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</td>
-				<td>
-					<button class="collapsible-header" onclick="toggleContent(event)">Section 2</button>
-					<div class="collapsible-content">
-						<table>
-							<tbody>
-								<tr>
-									<td>Content for section 1, row 1</td>
-								</tr>
-								<tr>
-									<td>Content for section 1, row 2</td>
-								</tr>
-								<tr>
-									<td>Content for section 1, row 3</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</td>
-			</tr>
+		  <tr>
+			<td>1</td>
+			<td>Dad &amp; Dave's Brewing</td>
+			<td>BOBA BEER</td>
+			<td>Sour - Berliner Weisse</td>
+			<td>6%</td>
+			<td>STEPPING UP</td>
+			<td><details><summary>A delightfully tart Grapefruit Beliner Weisse infused with Jasmine Green Tea. Bit notes of citrus and floral jasmine. Serve with Tapioca Pearls for full experience!</summary></details></td>
+			<td>-</td>
+			<td>-</td>
+		  </tr>
+		  <tr>
+			<td>2</td>
+			<td>The Coastal Brewing Company</td>
+			<td>HOMESTEAD BLACKBERRY &amp; APPLE PASTRY SOUR</td>
+			<td>Specialty Beer</td>
+			<td>6%</td>
+			<td>EASY DRINKING</td>
+			<td><details><summary>Perfect for an autumn or winter evening bringing crumble to a glass!</summary></details></td>
+			<td>-</td>
+			<td>-</td>
+		  </tr>
+		  <tr>
+			<td>3</td>
+			<td>7th Day Brewery</td>
+			<td>SUIT UP</td>
+			<td>IPA - Black</td>
+			<td>6.5%</td>
+			<td>STEPPING UP</td>
+			<td><details><summary>A dark malt base gives off roasted flavors. Chocolate and raisins mingle with piney resin and citric floral hops. Suit up and enjoy the ride!</summary></details></td>
+			<td>-</td>
+			<td>-</td>
+		  </tr>
+		  <tr>
+			<td>4</td>
+			<td>Six String Brewing Co.</td>
+			<td>WHISKEY IN THE JAR</td>
+			<td>Wood Aged Beer</td>
+			<td>12%</td>
+			<td>ADVENTUROUS</td>
+			<td><details><summary>A barrel-aged, American-Style Imperial Stout. Conditioned on a single batch whiskey distilled from a stout-inspired wash. This beer is a "Boilermaker" in a glass.</summary></details></td>
+			<td>-</td>
+			<td>-</td>
+		  </tr>
+		  <tr>
+			<td>5</td>
+			<td>The Marsden Brewhouse</td>
+			<td>MARSDEN NEOPOLITAN PORTER</td>
+			<td>Stout - Tropical</td>
+			<td>5.5%</td>
+			<td>STEPPING UP</td>
+			<td><details><summary>A different take on the Chocolate Porter with berry, vanilla, and chocolate creating a triumvirate of flavor. Try it with a piece of chocolate mud cake or just a piece of chocolate!</summary></details></td>
+			<td>-</td>
+			<td>-</td>
+		  </tr>
 		</tbody>
-	</table>
+	  </table>
 </body>
