--- a/gabs.html
+++ b/gabs.html
@@ -100,7 +100,7 @@
 			<td>Sour - Berliner Weisse</td>
 			<td>6%</td>
 			<td>STEPPING UP</td>
-			<td><details><summary>A delightfully tart Grapefruit Beliner Weisse infused with Jasmine Green Tea. Bit notes of citrus and floral jasmine. Serve with Tapioca Pearls for full experience!</summary></details></td>
+			<td><details><summary>Details</summary>A delightfully tart Grapefruit Beliner Weisse infused with Jasmine Green Tea. Bit notes of citrus and floral jasmine. Serve with Tapioca Pearls for full experience!</summary></td>
 			<td>-</td>
 			<td>-</td>
 		  </tr>
@@ -111,7 +111,7 @@
 			<td>Specialty Beer</td>
 			<td>6%</td>
 			<td>EASY DRINKING</td>
-			<td><details><summary>Perfect for an autumn or winter evening bringing crumble to a glass!</summary></details></td>
+			<td><details><summary>Details</summary>Perfect for an autumn or winter evening bringing crumble to a glass!</summary></td>
 			<td>-</td>
 			<td>-</td>
 		  </tr>
@@ -122,7 +122,7 @@
 			<td>IPA - Black</td>
 			<td>6.5%</td>
 			<td>STEPPING UP</td>
-			<td><details><summary>A dark malt base gives off roasted flavors. Chocolate and raisins mingle with piney resin and citric floral hops. Suit up and enjoy the ride!</summary></details></td>
+			<td><details><summary>Details</summary>A dark malt base gives off roasted flavors. Chocolate and raisins mingle with piney resin and citric floral hops. Suit up and enjoy the ride!</summary></td>
 			<td>-</td>
 			<td>-</td>
 		  </tr>
@@ -133,7 +133,7 @@
 			<td>Wood Aged Beer</td>
 			<td>12%</td>
 			<td>ADVENTUROUS</td>
-			<td><details><summary>A barrel-aged, American-Style Imperial Stout. Conditioned on a single batch whiskey distilled from a stout-inspired wash. This beer is a "Boilermaker" in a glass.</summary></details></td>
+			<td><details><summary>Details</summary>A barrel-aged, American-Style Imperial Stout. Conditioned on a single batch whiskey distilled from a stout-inspired wash. This beer is a "Boilermaker" in a glass.</summary></td>
 			<td>-</td>
 			<td>-</td>
 		  </tr>
@@ -144,7 +144,7 @@
 			<td>Stout - Tropical</td>
 			<td>5.5%</td>
 			<td>STEPPING UP</td>
-			<td><details><summary>A different take on the Chocolate Porter with berry, vanilla, and chocolate creating a triumvirate of flavor. Try it with a piece of chocolate mud cake or just a piece of chocolate!</summary></details></td>
+			<td><details><summary>Details</summary>A different take on the Chocolate Porter with berry, vanilla, and chocolate creating a triumvirate of flavor. Try it with a piece of chocolate mud cake or just a piece of chocolate!</summary></td>
 			<td>-</td>
 			<td>-</td>
 		  </tr>
