--- a/gabs.html
+++ b/gabs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Collapsible Table - Nord Theme</title>
+	<title>GABS 2023 Beer List</title>
 	<style>
 		body {
 			background-color: #2E3440;
