--- a/gabs.html
+++ b/gabs.html
@@ -75,6 +75,9 @@
 			}
 		}
 	</script>
+	<!-- Favicon
+	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  	<link rel="icon" type="image/png" href="images/avatar1.jpg">
 </head>
 <body>
 	<table>
