--- a/gabs.html
+++ b/gabs.html
@@ -77,7 +77,7 @@
 	</script>
 	<!-- Favicon
 	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  	<link rel="icon" type="image/png" href="images/gabsfavi.png">
+  	<link rel="icon" type="image/png" href="images/gabsfav.png">
 </head>
 <body>
 	<table>
