--- a/gabs.html
+++ b/gabs.html
@@ -24,6 +24,8 @@
 
 		th {
 			background-color: #4C566A;
+			position: sticky;
+        	top: 0;
 		}
 
 		.collapsible-header {
@@ -83,15 +85,15 @@
 	<table>
 		<thead>
 			<tr>
-				<th># GABS 2023 Beer List</th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
+				<th>#</th>
+				<th>Brewery</th>
+				<th>Beer Name</th>
+				<th>Style</th>
+				<th>ABV</th>
+				<th>Complexity</th>
+				<th>Description</th>
+				<th>Interested</th>
+				<th>Notes</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -105,17 +107,6 @@
 				<td></td>
 				<td></td>
 				<td></td>
-			</tr>
-			<tr>
-				<td>#</td>
-				<td>Brewery</td>
-				<td>Beer Name</td>
-				<td>Style</td>
-				<td>ABV</td>
-				<td>Complexity</td>
-				<td>Description</td>
-				<td>Interested</td>
-				<td>Notes</td>
 			</tr>
 			<tr>
 				<td>1</td>
