--- a/gabs.html
+++ b/gabs.html
@@ -98,7 +98,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>## Section 1</td>
+				<td>Section 1</td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -329,7 +329,7 @@
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>## Section 2</td>
+				<td>Section 2</td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -560,7 +560,7 @@
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>## Section 3</td>
+				<td>Section 3</td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -791,7 +791,7 @@
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>## Section 4</td>
+				<td>Section 4</td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -1022,7 +1022,7 @@
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>## Section 5</td>
+				<td>Section 5</td>
 				<td></td>
 				<td></td>
 				<td></td>
@@ -1253,7 +1253,7 @@
 				<td>-</td>
 			</tr>
 			<tr>
-				<td>## Section 6</td>
+				<td>Section 6</td>
 				<td></td>
 				<td></td>
 				<td></td>
