--- a/gabs.html
+++ b/gabs.html
@@ -1241,7 +1241,7 @@
 				<td>Ginger/Spiced Beer</td>
 				<td>6%</td>
 				<td>MID</td>
-				<td><details><summary></summary>It's not commonly known, but the Spicy Wombat feasts on much more than just Roots and Leaves. He also devours spicy fire fruit chillies turned into Danger Dust and tempers it with limes for the ultimate in ginger beer flavours. This is a beer to cleanse your pallet and get a reset, or to use as the backbone for your fried snacks. You can womble like a wombat and have Roots and Leaves, or you can spice it up and try the Spicy Wombat to give so much more. Do you even dare bro?</details></td>
+				<td><details><summary></summary>It's not commonly known, but the Spicy Wombat devours spicy fire fruit chillies and tempers it with limes for the ultimate in ginger beer flavours. This is a beer to cleanse your pallet and get a reset.</details></td>
 				<td><input type="checkbox" id="option113"></td>
 			</tr>
 			<tr>
