fix case of IPA

--- a/gabs.html
+++ b/gabs.html
@@ -202,7 +202,7 @@
 			<tr>
 				<td>11</td>
 				<td>The Zythologist</td>
-				<td>Molecular Bubble Tea Ipa</td>
+				<td>Molecular Bubble Tea IPA</td>
 				<td>IPA - Milkshake</td>
 				<td>6.2%</td>
 				<td>MID</td>
@@ -335,7 +335,7 @@
 			<tr>
 				<td>24</td>
 				<td>Noodledoof</td>
-				<td>Desert Lime Gimlet Ipa</td>
+				<td>Desert Lime Gimlet IPA</td>
 				<td>Specialty Beer</td>
 				<td>6.8%</td>
 				<td>MID</td>
@@ -548,7 +548,7 @@
 			<tr>
 				<td>45</td>
 				<td>Craft and Co.</td>
-				<td>The Craft And Co. Wipa</td>
+				<td>The Craft And Co. WIPA</td>
 				<td>IPA - Imperial</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -598,7 +598,7 @@
 			<tr>
 				<td>50</td>
 				<td>Eumundi Brewery</td>
-				<td>Ginger Nut Sparkling Ipa</td>
+				<td>Ginger Nut Sparkling IPA</td>
 				<td>IPA - Brut</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -628,7 +628,7 @@
 			<tr>
 				<td>53</td>
 				<td>Merino Brewery</td>
-				<td>Mulberry Bush Imperial Ipa</td>
+				<td>Mulberry Bush Imperial IPA</td>
 				<td>IPA - Black</td>
 				<td>7.5%</td>
 				<td>MID</td>
@@ -914,7 +914,7 @@
 			<tr>
 				<td>81</td>
 				<td>Quakers Hat Brewing</td>
-				<td>Brut Ipa</td>
+				<td>Brut IPA</td>
 				<td>IPA - Brut</td>
 				<td>6.3%</td>
 				<td>MID</td>
@@ -964,7 +964,7 @@
 			<tr>
 				<td>86</td>
 				<td>TWØBAYS Brewing Co</td>
-				<td>Pumpkin Of Liberty Ipa</td>
+				<td>Pumpkin Of Liberty IPA</td>
 				<td>IPA - American</td>
 				<td>7%</td>
 				<td>MID</td>
@@ -1227,7 +1227,7 @@
 			<tr>
 				<td>112</td>
 				<td>Southern Highlands Brewing</td>
-				<td>Ronin - Japanese Double Ipa</td>
+				<td>Ronin - Japanese Double IPA</td>
 				<td>IPA - Double</td>
 				<td>7%</td>
 				<td>HIGH</td>
