standardized brewery names

--- a/gabs.html
+++ b/gabs.html
@@ -111,7 +111,7 @@
 			</tr>
 			<tr>
 				<td>2</td>
-				<td>The Coastal Brewing Company</td>
+				<td>The Coastal Brewing</td>
 				<td>Homestead Blackberry & Apple Pastry Sour</td>
 				<td>Specialty Beer</td>
 				<td>6%</td>
@@ -131,7 +131,7 @@
 			</tr>
 			<tr>
 				<td>4</td>
-				<td>Six String Brewing Co.</td>
+				<td>Six String Brewing</td>
 				<td>Whiskey In The Jar</td>
 				<td>Wood Aged Beer</td>
 				<td>12%</td>
@@ -161,7 +161,7 @@
 			</tr>
 			<tr>
 				<td>7</td>
-				<td>Hop Nation Brewing Co</td>
+				<td>Hop Nation Brewing</td>
 				<td>Market 2023</td>
 				<td>IPA - New England</td>
 				<td>6%</td>
@@ -171,7 +171,7 @@
 			</tr>
 			<tr>
 				<td>8</td>
-				<td>Bad Shepherd Brewing Co</td>
+				<td>Bad Shepherd Brewing</td>
 				<td>Barrel Aged Rum Double Choc...</td>
 				<td>Specialty Beer</td>
 				<td>7.5%</td>
@@ -181,7 +181,7 @@
 			</tr>
 			<tr>
 				<td>9</td>
-				<td>Yenda Brewing Co</td>
+				<td>Yenda Brewing</td>
 				<td>I Am Weiss</td>
 				<td>Weizen/Weissbier</td>
 				<td>5%</td>
@@ -211,7 +211,7 @@
 			</tr>
 			<tr>
 				<td>12</td>
-				<td>Sauce Brewing Co</td>
+				<td>Sauce Brewing</td>
 				<td>Lavender Cheesecake</td>
 				<td>Sour - Pastry</td>
 				<td>8%</td>
@@ -231,7 +231,7 @@
 			</tr>
 			<tr>
 				<td>14</td>
-				<td>Local Brewing Co</td>
+				<td>Local Brewing</td>
 				<td>Don't Go Baking My Heart (Nitro Cinnamon Pastry Stout)</td>
 				<td>Stout - Pastry</td>
 				<td>8%</td>
@@ -241,7 +241,7 @@
 			</tr>
 			<tr>
 				<td>15</td>
-				<td>Feral Brewing Co</td>
+				<td>Feral Brewing</td>
 				<td>Cherry Maguire</td>
 				<td>Sour - Pastry</td>
 				<td>6.5%</td>
@@ -281,7 +281,7 @@
 			</tr>
 			<tr>
 				<td>19</td>
-				<td>Big Shed Brewing Concern</td>
+				<td>Big Shed Brewing</td>
 				<td>Only Flans</td>
 				<td>Sour - Pastry</td>
 				<td>6.9%</td>
@@ -314,7 +314,7 @@
 			</tr>
 			<tr>
 				<td>22</td>
-				<td>Catchment Brewing Co</td>
+				<td>Catchment Brewing</td>
 				<td>Long Island Iced Tea Sour</td>
 				<td>Sour - Kettle Sour</td>
 				<td>7.5%</td>
@@ -344,7 +344,7 @@
 			</tr>
 			<tr>
 				<td>25</td>
-				<td>Wayward Brewing Co</td>
+				<td>Wayward Brewing</td>
 				<td>Violet Beauregarde’s Blueberry Marshmallow Lactose Sour Ale</td>
 				<td>Sour - Pastry</td>
 				<td>4.0%</td>
@@ -354,7 +354,7 @@
 			</tr>
 			<tr>
 				<td>26</td>
-				<td>Batch Brewing Co</td>
+				<td>Batch Brewing</td>
 				<td>Augustus Gloop’S Choc Fudge Peanut Brittle Stout</td>
 				<td>Stout - Pastry</td>
 				<td>6.0%</td>
@@ -384,7 +384,7 @@
 			</tr>
 			<tr>
 				<td>29</td>
-				<td>Good Land Brewing Co</td>
+				<td>Good Land Brewing</td>
 				<td>Bananarama Pina Colada</td>
 				<td>Sour - Fruit</td>
 				<td>5.8%</td>
@@ -464,7 +464,7 @@
 			</tr>
 			<tr>
 				<td>37</td>
-				<td>Revel Brewing Co.</td>
+				<td>Revel Brewing</td>
 				<td>Black Forrest Cake Sour</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
@@ -507,7 +507,7 @@
 			</tr>
 			<tr>
 				<td>41</td>
-				<td>Braeside Brewing Co</td>
+				<td>Braeside Brewing</td>
 				<td>Rye Rye Rye Deliah</td>
 				<td>IPA - Red</td>
 				<td>6.5%</td>
@@ -527,7 +527,7 @@
 			</tr>
 			<tr>
 				<td>43</td>
-				<td>Moffat Beach Brewing Co</td>
+				<td>Moffat Beach Brewing</td>
 				<td>Can'T Beet A Root</td>
 				<td>Lager - Classic Pilsner</td>
 				<td>4.8%</td>
@@ -537,7 +537,7 @@
 			</tr>
 			<tr>
 				<td>44</td>
-				<td>Shifty Lizard Brewing Co.</td>
+				<td>Shifty Lizard Brewing</td>
 				<td>Cotton Candy Sour</td>
 				<td>Sour - Kettle Sour</td>
 				<td>4.8%</td>
@@ -567,7 +567,7 @@
 			</tr>
 			<tr>
 				<td>47</td>
-				<td>Reckless Brewing Co</td>
+				<td>Reckless Brewing</td>
 				<td>Bogan Fuel</td>
 				<td>Specialty Beer</td>
 				<td>6.9%</td>
@@ -617,7 +617,7 @@
 			</tr>
 			<tr>
 				<td>52</td>
-				<td>Mismatch Brewing Co</td>
+				<td>Mismatch Brewing</td>
 				<td>Hop Quad Buns</td>
 				<td>Belgian Quad</td>
 				<td>10.5%</td>
@@ -647,7 +647,7 @@
 			</tr>
 			<tr>
 				<td>55</td>
-				<td>Capital Brewing Co</td>
+				<td>Capital Brewing</td>
 				<td>Salvaged Sour - Apple & Rhubarb Crumble Pastry Imperial Sour</td>
 				<td>Sour - Pastry</td>
 				<td>10%</td>
@@ -667,7 +667,7 @@
 			</tr>
 			<tr>
 				<td>57</td>
-				<td>Slipstream Brewing Co</td>
+				<td>Slipstream Brewing</td>
 				<td>Maple Bacon Pancake Stout</td>
 				<td>Stout - Sweet Stout</td>
 				<td>7%</td>
@@ -697,7 +697,7 @@
 			</tr>
 			<tr>
 				<td>60</td>
-				<td>Squinters Brewing Co</td>
+				<td>Squinters Brewing</td>
 				<td>Tha Thiccness Version 2</td>
 				<td>IPA - Hazy</td>
 				<td>6.7%</td>
@@ -730,7 +730,7 @@
 			</tr>
 			<tr>
 				<td>63</td>
-				<td>Stomping Ground Brewing Co</td>
+				<td>Stomping Ground Brewing</td>
 				<td>Buck Yeah</td>
 				<td>Eisbock</td>
 				<td>13%</td>
@@ -750,7 +750,7 @@
 			</tr>
 			<tr>
 				<td>65</td>
-				<td>Your Mates Brewing Co</td>
+				<td>Your Mates Brewing</td>
 				<td>Imperial White Choc & Macadamia Stout</td>
 				<td>Stout - Imperial</td>
 				<td>9%</td>
@@ -770,12 +770,12 @@
 			</tr>
 			<tr>
 				<td>67</td>
-				<td>Shark Island Brewing Co</td>
+				<td>Shark Island Brewing</td>
 				<td>Life Can Be Sweet & Sour</td>
 				<td>Specialty Beer</td>
 				<td>6.9%</td>
 				<td>MID</td>
-				<td><details><summary></summary>A zesty Saison infused with cinnamon and pineapple, inspired by a mishap with champagne spilled on a laptop frozen on the screen of Sweet & Sour Pork. Expect a crisp, refreshing, sweet, and spicy beer from Shark Island Brewing Co.</details></td>
+				<td><details><summary></summary>A zesty Saison infused with cinnamon and pineapple, inspired by a mishap with champagne spilled on a laptop frozen on the screen of Sweet & Sour Pork. Expect a crisp, refreshing, sweet, and spicy beer from Shark Island Brewing</details></td>
 				<td><input type="checkbox" id="option067"></td>
 			</tr>
 			<tr>
@@ -810,7 +810,7 @@
 			</tr>
 			<tr>
 				<td>71</td>
-				<td>Warrandyte Brewing Co.</td>
+				<td>Warrandyte Brewing</td>
 				<td>Dayummm</td>
 				<td>Schwarzbier</td>
 				<td>5.5%</td>
@@ -880,7 +880,7 @@
 			</tr>
 			<tr>
 				<td>78</td>
-				<td>Katoomba Brewing Co.</td>
+				<td>Katoomba Brewing</td>
 				<td>Mountain Sunset</td>
 				<td>IPA - Red</td>
 				<td>6.5%</td>
@@ -900,7 +900,7 @@
 			</tr>
 			<tr>
 				<td>80</td>
-				<td>Akasha Brewing Co</td>
+				<td>Akasha Brewing</td>
 				<td>Barrel Aged Imperial Porter</td>
 				<td>Porter</td>
 				<td>10.2%</td>
@@ -963,7 +963,7 @@
 			</tr>
 			<tr>
 				<td>86</td>
-				<td>TWØBAYS Brewing Co</td>
+				<td>TWØBAYS Brewing</td>
 				<td>Pumpkin Of Liberty IPA</td>
 				<td>IPA - American</td>
 				<td>7%</td>
@@ -973,7 +973,7 @@
 			</tr>
 			<tr>
 				<td>87</td>
-				<td>Wandana Brewing Co.</td>
+				<td>Wandana Brewing</td>
 				<td>Aztec (Pale Chocolate Lager)</td>
 				<td>Lager - Pale</td>
 				<td>4.4%</td>
@@ -1003,7 +1003,7 @@
 			</tr>
 			<tr>
 				<td>90</td>
-				<td>Jervis Bay Brewing Co</td>
+				<td>Jervis Bay Brewing</td>
 				<td>Hypster Latte Stout</td>
 				<td>Sour - Berliner Weisse</td>
 				<td>7%</td>
@@ -1013,7 +1013,7 @@
 			</tr>
 			<tr>
 				<td>91</td>
-				<td>Blasta Brewing Co</td>
+				<td>Blasta Brewing</td>
 				<td>Fruits on Fire - Spicy Sour</td>
 				<td>Strawberry, Pineapple</td>
 				<td>5%</td>
@@ -1023,7 +1023,7 @@
 			</tr>
 			<tr>
 				<td>92</td>
-				<td>Hawkes Brewing Co</td>
+				<td>Hawkes Brewing</td>
 				<td>Hawke's Bob Hulk Double Hazy IPA</td>
 				<td>IPA - New England</td>
 				<td>8.5%</td>
@@ -1033,7 +1033,7 @@
 			</tr>
 			<tr>
 				<td>93</td>
-				<td>Lost Palms Brewing Co</td>
+				<td>Lost Palms Brewing</td>
 				<td>Feedback</td>
 				<td>Sour - Pastry</td>
 				<td>14%</td>
@@ -1053,7 +1053,7 @@
 			</tr>
 			<tr>
 				<td>95</td>
-				<td>Freshwater Brewing Co</td>
+				<td>Freshwater Brewing</td>
 				<td>Barrel Aged Cerveza</td>
 				<td>Lager - Pale</td>
 				<td>6%</td>
@@ -1073,7 +1073,7 @@
 			</tr>
 			<tr>
 				<td>97</td>
-				<td>Newstead Brewing Co</td>
+				<td>Newstead Brewing</td>
 				<td>Yo Ho!</td>
 				<td>Rum Porter</td>
 				<td>9.9%</td>
@@ -1186,7 +1186,7 @@
 			</tr>
 			<tr>
 				<td>108</td>
-				<td>Rocky Ridge Brewing Co.</td>
+				<td>Rocky Ridge Brewing</td>
 				<td>Frootie & The Blowfish</td>
 				<td>Fruit Beer</td>
 				<td>8%</td>
@@ -1196,7 +1196,7 @@
 			</tr>
 			<tr>
 				<td>109</td>
-				<td>Hiker Brewing Co</td>
+				<td>Hiker Brewing</td>
 				<td>Hold The Pork</td>
 				<td>Specialty Beer</td>
 				<td>5%</td>
@@ -1206,7 +1206,7 @@
 			</tr>
 			<tr>
 				<td>110</td>
-				<td>One Drop Brewing Co.</td>
+				<td>One Drop Brewing</td>
 				<td>Raspberry Lemonade</td>
 				<td>Specialty Brew</td>
 				<td>6.2%</td>
@@ -1266,7 +1266,7 @@
 			</tr>
 			<tr>
 				<td>116</td>
-				<td>Felons Brewing Co</td>
+				<td>Felons Brewing</td>
 				<td>Barrel Aged Seltzerita</td>
 				<td>Seltzer</td>
 				<td>13%</td>
