--- a/gabs.html
+++ b/gabs.html
@@ -1317,7 +1317,7 @@
 		</tbody>
 	</table>
 
-	<button>Check all</button>
+	<button style="float: right;">😈Check all😈</button>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
@@ -1334,7 +1334,7 @@
 
       function updateButtonStatus(){
         var allChecked = $(":checkbox").length === $(":checkbox:checked").length;
-        $("button").text(allChecked? "Uncheck all" : "Check all");
+        $("button").text(allChecked? "👼Uncheck all👼" : "😈Check all😈");
       }
 
       function updateCookie(){
