--- a/gabs.html
+++ b/gabs.html
@@ -1324,7 +1324,7 @@
 
     <script>
       function handleButtonClick(button){
-        if ($(button).text().match("Check all")){
+        if ($(button).text().match("😈Check all😈")){
           $(":checkbox").prop("checked", true)
         } else {
           $(":checkbox").prop("checked", false)
